[package]
name = "dev-tools"
version = "0.2.0"
edition = "2021"
description = "开发者工具箱：单文件 Rust Web 应用"
license = "Apache-2.0"

[[bin]]
name = "dev-tools"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
opener = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
bytes = "1"

# 业务依赖
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# JSON 格式互转 / Schema / 查询
serde_yaml = "0.9.34"
toml = "1.1.2"
csv = "1.4.0"
quick-xml = "0.40.1"
jsonschema = { version = "0.46.6", default-features = false }
serde_json_path = "0.7.2"
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = "2.0.1"

[build-dependencies]
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
